--- a/docs/README.adoc
+++ b/docs/README.adoc
@@ -16,15 +16,58 @@ Version 1.0
 
 == StateWalker will simplify the coding of your (complex) state machines.
 
+Statewalker implements a hierarchical state pattern variant by using a stack of states.
+The child-most state is on top, it super state (if any) below it and so on.
+To change a state the code
 
-Just add a Java 8 interface with default methods for all methods or events you states should accept. Have an enum implement this interface and give it at least  a `NULL` value.
+=== Apply it to your project:
 
-.MyState template
+To make it work in your project, you have to some work yourselves.
+. Implement a Context that extends BaseContext like this
+. Extend a State interface with default method handlers for ALL events (methods) relevant to your state machine.
+. Have a StateEnum implement this State interface. Since the interface has default methods only, a state only has to overwrite
+any method that is relevant to this state.
+. You will also need a _Device_ that can be asked from the context and can be manipulated (as in: call methods on it) in the states.
+What the 'device' is and what it can do is up to you. For a coffee machine it would be the boiler and the lights. For an elevator the door motor and elevator motor. 
+=== The Context
+[source,java]
+----
+class Context extends ContextBase<Context, Dev, State> {
+
+  public Context( Class<?> stateClass ) {
+          super( stateClass );
+  }
+
+  void e2() {
+        getTopState().e2( this );
+  } //etc
+}
+----
+
+=== State interface
+.statewalkertest State interface
+[source,java]
+----
+include::{sourcedir}/State.java[]
+----
+
+As you can see all but the pseudo events reach the event down to the next state on the state stack.
+
+Then have an enum implement this interface and give it at least  a `NULL` value.
+
+.MyState enum template
 [[Mock-setup]]
 [source,java]
 ----
 include::{sourcedir}/MyState.java[]
 ----
+
+.the device class header
+[source,java]
+----
+public class Dev implements Device<Context, Dev, State> {
+----
+
 
 For an example see the maven project statewalkertest in the repository, which implements the state bahavior in the <<StateDiagram>> below:
 
