--- a/docs/README.adoc
+++ b/docs/README.adoc
@@ -61,11 +61,12 @@ Then have an enum implement this interface and give it at least  a `NULL` value.
 ----
 include::{sourcedir}/MyState.java[]
 ----
-Examples:
+Explanation:
 
 <1> Turns the heater on on entry.
 <2> Turns the heater off on exit.
 <3> Changes state to S31, implicitly leaving this state which should automagically call exit on `this` state, which is `S33` and thus turns off the heater.
+
 .the device class header
 [source,java]
 ----
